src/test/deca/context/valid/oracle/use_defined_variable_in_if.deca
{
    int i = 1;
    if(true){
        println(i);
    }
}