src/test/deca/context/invalid/added/test_dir/use_var_without_def.deca
{
  int i = 0;
  x = 5;
}
